nsk/stress/jck60/jck60014 crashes on sparc

XMLWordPrintable

    • b29
    • Verified

        # SIGSEGV (0xb) at pc=0xffffffff73902628, pid=2023, tid=142
        #
        # JRE version: Java(TM) SE Runtime Environment (9.0-b26) (build 1.9.0-ea-fastdebug-b26)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (1.9.0-fastdebug-internal-201408140039.iggy.8054883 compiled mode solaris-sparc )
        # Problematic frame:
        # J 7589 C2 java.lang.String.getChars(II[CI)V (62 bytes) @ 0xffffffff73902628 [0xffffffff73902540+0xe8]

        we're loading the first array element and doing an explicit null check after that..
        0xffffffff73902628: ld [%g1 + 16], %l7
        0xffffffff7390262c: add %l2, %l3, %l6
        0xffffffff73902630: cxbe %g1, %g0, 0xffffffff73902688 ! 0xffffffff73902688
        0xffffffff73902634: nop

        Maybe related to arraycopy as macro node change

        ILW = HLH = P2

              Assignee:
              Roland Westrelin
              Reporter:
              Roland Westrelin
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: