8055153: nsk/stress/jck60/jck60014 crashes on sparc

Missing control for LoadRange and LoadKlass nodes created during arraycopy node expansion

Reviewed-by: kvn, iveresov